// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon/> renders correctly with default props 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo jTBtSb"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with prop type=custom 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue djBARX"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with prop type=svg 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo jTBtSb"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=custom, backgroundColor 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue evCsMg"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, backgroundColor, color 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue evCsMg"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, border 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue gubCwH"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, border, borderWidth 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue zreGr"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, border, borderWidth, rounded 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue ehQynk"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, border, rounded 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue gtzvhT"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, color 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue djBARX"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, colorScheme=light 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue ixwfM"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, flip=horizontal 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue ivYBQB"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, flip=vertical 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue kISsqy"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, iconSrc 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue howlSV"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, rotate 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue vSufI"
  color=""
  rotate={45}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, size=large 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue dfVbFt"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, size=small 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue hdCIYq"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=custom, size=xlarge 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue eTpbCE"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly with props type=svg and border 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo cRTIbe"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg and children 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo jTBtSb"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M7,10l5,5l5-5H7z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg and src 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo jTBtSb"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M7,10l5,5l5-5H7z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg flip=vertical 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo IIQTa"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, backgroundColor 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo ikOmjR"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, backgroundColor, color 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo bgGOOb"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, border and borderWidth 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo blQAut"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, border and rounded 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo cITZPs"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, border, rounded and borderWidth 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo kpqvRP"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, color 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo cxNzEJ"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, colorScheme=light 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo ibIFIX"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, flip=horizontal 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo bpDoAU"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, rotate 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo fhRFOp"
  color=""
  rotate={45}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, size=large 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo eaeAsm"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, size=small 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo fkRTgE"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;

exports[`<Icon/> renders correctly with props type=svg, size=xlarge 1`] = `
<div
  className="IconSvgStyled__IconSvgStyled-iCtyLo eVtvkX"
  color=""
  rotate={0}
  size="normal"
  type="svg"
>
  <svg
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
    />
  </svg>
</div>
`;
